--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,19 @@
-version: '2'
+version: '3'
 
 services:
     reverse-proxy:
-        image: jwilder/nginx-proxy
-        container_name: nginx-reverse-proxy
+        image: traefik
+        container_name: traefik-reverse-proxy
         ports:
             - 80:80
             - 443:443
+            - 8080:8080
         volumes:
-            - ${CERTIFICATES_FOLDER}:/etc/nginx/certs:ro
-            - /var/run/docker.sock:/tmp/docker.sock:ro
-        depends_on:
-            - nextcloud
+            - ./traefik.toml:/traefik.toml
+            - ${CERTIFICATES_FOLDER}:/certificates:ro
+            - /var/run/docker.sock:/var/run/docker.sock:ro
+        networks:
+            - frontend
         restart: always
 
     nextcloud-db:
@@ -20,21 +22,40 @@ services:
         env_file: ./.servenv/nc-db-env
         volumes:
             - ${NEXTCLOUD_DB_FOLDER}:/var/lib/postgresql/data
+        networks:
+            - backend
         restart: always
 
     nextcloud:
-        image: nextcloud:latest
+        image: wonderfall/nextcloud
         container_name: nextcloud
-        environment:
-            - VIRTUAL_HOST=${NEXTCLOUD_VIRTUAL_HOST}
         env_file: ./.servenv/nc-env
-        ports:
-            - 8080
+        environment:
+            - UID=${NEXTCLOUD_UID}
+            - GID=${NEXTCLOUD_GID}
+        expose:
+            - 8888
+        labels:
+            - traefik.enable=true
+            - traefik.docker.network=${COMPOSE_PROJECT_NAME}_frontend
+            - traefik.port=8888
+            - traefik.frontend.rule=Host:${NEXTCLOUD_VIRTUAL_HOST}
+            - traefik.backend=nextcloud
         volumes:
-            - ${NEXTCLOUD_APP_FOLDER}:/var/www/html
-            - ${NEXTCLOUD_DATA_FOLDER}:/var/www/html/data
-        links:
-            - nextcloud-db
+            - ${NEXTCLOUD_DATA_FOLDER}:/data
+            - ${NEXTCLOUD_CONFIG_FOLDER}:/config
+            - ${NEXTCLOUD_APP_FOLDER}:/apps2
         depends_on:
             - nextcloud-db
+        links:
+            - nextcloud-db
+        networks:
+            - frontend
+            - backend
         restart: always
+
+networks:
+    frontend:
+        driver: bridge
+    backend:
+        driver: bridge
