--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
             - /var/run/docker.sock:/var/run/docker.sock:ro
         networks:
             - frontend
-        restart: always
+        restart: unless-stopped
 
     nextcloud-db:
         image: postgres:latest
@@ -24,7 +24,7 @@ services:
             - ${NEXTCLOUD_DB_FOLDER}:/var/lib/postgresql/data
         networks:
             - backend
-        restart: always
+        restart: unless-stopped
 
     nextcloud:
         image: wonderfall/nextcloud:latest
@@ -52,7 +52,7 @@ services:
         networks:
             - frontend
             - backend
-        restart: always
+        restart: unless-stopped
 
     samba:
         image: dperson/samba:latest
@@ -67,7 +67,7 @@ services:
         volumes:
             - ${SAMBA_SHARES_FOLDER}:/shares
         command: ${SAMBA_COMMAND}
-        restart: always
+        restart: unless-stopped
 
     transmission:
         image: dperson/transmission:latest
@@ -90,7 +90,7 @@ services:
         volumes:
             - ${TRANSMISSION_INCOMPLETE_FOLDER}:/var/lib/transmission-daemon/incomplete
             - ${TRANSMISSION_DOWNLOADED_FOLDER}:/var/lib/transmission-daemon/downloads
-        restart: always
+        restart: unless-stopped
 
 networks:
     frontend:
