--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,6 @@ services:
             - ./traefik.toml:/traefik.toml
             - ${CERTIFICATES_FOLDER}:/certificates:ro
             - /var/run/docker.sock:/var/run/docker.sock:ro
-        networks:
-            - frontend
         restart: unless-stopped
 
     nextcloud-db:
@@ -22,8 +20,6 @@ services:
         env_file: ./.servenv/nc-db-env
         volumes:
             - ${NEXTCLOUD_DB_FOLDER}:/var/lib/postgresql/data
-        networks:
-            - backend
         restart: unless-stopped
 
     nextcloud:
@@ -49,9 +45,6 @@ services:
             - nextcloud-db
         links:
             - nextcloud-db
-        networks:
-            - frontend
-            - backend
         restart: unless-stopped
 
     samba:
@@ -77,23 +70,18 @@ services:
             - TRPASSWD=${TRANSMISSION_PASSWORD}
             - USERID=${TRANSMISSION_UID}
             - GROUPID=${TRANSMISSION_GID}
-        expose:
-            - 9091
-        labels:
-            - traefik.enable=true
-            - traefik.docker.network=${COMPOSE_PROJECT_NAME}_frontend
-            - traefik.port=9091
-            - traefik.frontend.rule=Host:${TRANSMISSION_VIRTUAL_HOST}
-            - traefik.backend=transmission
-        networks:
-            - frontend
+        ports:
+            - 9091:9091
+              #        expose:
+              #            - 9091
+              #        labels:
+              #            - traefik.enable=true
+              #            - traefik.docker.network=${COMPOSE_PROJECT_NAME}_frontend
+              #            - traefik.port=9091
+              #            - traefik.frontend.rule=Host:${TRANSMISSION_VIRTUAL_HOST}
+              #            - traefik.backend=transmission
         volumes:
             - ${TRANSMISSION_INCOMPLETE_FOLDER}:/var/lib/transmission-daemon/incomplete
             - ${TRANSMISSION_DOWNLOADED_FOLDER}:/var/lib/transmission-daemon/downloads
         restart: unless-stopped
 
-networks:
-    frontend:
-        driver: bridge
-    backend:
-        driver: bridge
