--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,11 @@ services:
             - --providers.docker=true
             - --entryPoints.web.address=:80
             - --entryPoints.websecure.address=:443
-           #- --api.insecure=true
+            #- --api.insecure=true
         ports:
             - 80:80
             - 443:443
-           #- 8080:8080
+            #- 8080:8080
         volumes:
             - /var/run/docker.sock:/var/run/docker.sock:ro
             - ./traefik-dynamic.toml:/traefik-dynamic.toml
@@ -24,7 +24,7 @@ services:
         restart: unless-stopped
 
     nextcloud-db:
-        image: postgres:9-alpine
+        image: postgres:alpine
         container_name: nextcloud-db
         env_file: ./.servenv/nc-db-env
         volumes:
@@ -34,16 +34,13 @@ services:
         restart: unless-stopped
 
     nextcloud:
-        image: wonderfall/nextcloud:latest
+        image: nextcloud:latest
         container_name: nextcloud
         env_file: ./.servenv/nc-env
-        environment:
-            - UID=${NEXTCLOUD_UID}
-            - GID=${NEXTCLOUD_GID}
         ports:
-            - 8888:8888
+            - 7000:80
         labels:
-            - "traefik.http.services.nextcloud.loadbalancer.server.port=8888"
+            - "traefik.http.services.nextcloud.loadbalancer.server.port=80"
 
             - "traefik.http.middlewares.ncstrip.stripprefix.prefixes=/nextcloud"
 
@@ -59,9 +56,10 @@ services:
             - "traefik.http.routers.ncwebsecure.tls.domains.main=default"
             - "traefik.http.routers.ncwebsecure.middlewares=ncstrip"
         volumes:
-            - ${NEXTCLOUD_DATA_FOLDER}:/data
-            - ${NEXTCLOUD_CONFIG_FOLDER}:/config
-            - ${NEXTCLOUD_APP_FOLDER}:/apps2
+            - ${NEXTCLOUD_BASE_FOLDER}:/var/www/html 
+            - ${NEXTCLOUD_APP_FOLDER}:/var/www/html/custom_apps 
+            - ${NEXTCLOUD_CONFIG_FOLDER}:/var/www/html/config 
+            - ${NEXTCLOUD_DATA_FOLDER}:/var/www/html/data 
         networks:
             - nextcloud
             - frontend
